--- a/Views/Admin/DetallePedido.cshtml
+++ b/Views/Admin/DetallePedido.cshtml
@@ -11,20 +11,20 @@
 
 
         <h2 style="color:saddlebrown;  font-family: cursive;  font-weight:bold;">
-            Pedido+id
+            Pedido 11
         </h2>
         <fieldset disabled>
             <div class="row justify-content-center">
                 <div class="col-4">
                     <div class="mb-3">
                         <label for="InputNombreUsuario" class="form-label"><h8 style="color:black; ">Nombre</h8> </label>
-                        <input type="text" id="InputNombreProduc" class="form-control" value="aca va el nombre del usuario">
+                        <input type="text" id="InputNombreProduc" class="form-control" value="juan">
                     </div>
                 </div>
                 <div class="col-4">
                     <div class="mb-3">
                         <label for="InputNombreProduc" class="form-label"><h8 style="color:black; ">Departamento</h8> </label>
-                        <input type="text" id="InputNombreProduc" class="form-control" value="aca va el departamento">
+                        <input type="text" id="InputNombreProduc" class="form-control" value="cundinamarca">
                     </div>
                 </div>
             </div>
@@ -32,13 +32,13 @@
                 <div class="col-4">
                     <div class="mb-3">
                         <label for="InputNombreUsuario" class="form-label"><h8 style="color:black; ">Cuidad</h8> </label>
-                        <input type="text" id="InputNombreProduc" class="form-control"value="aca va la ciudad">
+                        <input type="text" id="InputNombreProduc" class="form-control" value="bogota">
                     </div>
                 </div>
                 <div class="col-4">
                     <div class="mb-3">
                         <label for="InputNombreProduc" class="form-label"><h8 style="color:black; ">Direccion</h8> </label>
-                        <input type="text" id="InputNombreProduc" class="form-control" value="aca va la direccion">
+                        <input type="text" id="InputNombreProduc" class="form-control" value="crra 5a norte 2-69">
                     </div>
                 </div>
             </div>
@@ -46,13 +46,13 @@
                 <div class="col-4">
                     <div class="mb-3">
                         <label for="InputNombreUsuario" class="form-label"><h8 style="color:black; ">Contacto</h8> </label>
-                        <input type="text" id="InputNombreProduc" class="form-control" value="aca va el contacto">
+                        <input type="text" id="InputNombreProduc" class="form-control" value="3215246">
                     </div>
                 </div>
                 <div class="col-4">
                     <div class="mb-3">
                         <label for="InputNombreProduc" class="form-label"><h8 style="color:black; ">Correo</h8> </label>
-                        <input type="text" id="InputNombreProduc" class="form-control" value="aca va el correo">
+                        <input type="text" id="InputNombreProduc" class="form-control" value="alba@gmail.com">
                     </div>
                 </div>
             </div>
@@ -60,13 +60,13 @@
                 <div class="col-4">
                     <div class="mb-3">
                         <label for="InputNombreUsuario" class="form-label"><h8 style="color:black; ">Fecha de entrega</h8> </label>
-                        <input type="text" id="InputNombreProduc" class="form-control" value="aca va la fecha de entrega">
+                        <input type="text" id="InputNombreProduc" class="form-control" value="2024-11-20">
                     </div>
                 </div>
                 <div class="col-4">
                     <div class="mb-3">
                         <label for="InputNombreProduc" class="form-label"><h8 style="color:black; ">Total a pagar</h8> </label>
-                        <input type="text" id="InputNombreProduc" class="form-control" value="aca va el nombre">
+                        <input type="text" id="InputNombreProduc" class="form-control" value="60000">
                     </div>
                 </div>
             </div>
@@ -110,7 +110,7 @@
         </div>
 
 
-     </div>
+    </div>
 </div>
 
 <style>
