--- a/Views/Admin/ProductosPedido.cshtml
+++ b/Views/Admin/ProductosPedido.cshtml
@@ -21,9 +21,9 @@
         <!-- Aquí se agregan dinámicamente los productos -->
         <tr>
             <td>25</td>
-            <td>galleta 1</td>
+            <td>kinder</td>
             <td>2</td>
-            <td>9000</td>
+            <td>2000</td>
            
 
         </tr>
