--- a/Views/Domiciliario/DetallesPedidos.cshtml
+++ b/Views/Domiciliario/DetallesPedidos.cshtml
@@ -9,20 +9,20 @@
 
 
         <h2 style="color:saddlebrown;  font-family: cursive;  font-weight:bold;">
-            Pedido+id
+            Pedido 11
         </h2>
         <fieldset disabled>
             <div class="row justify-content-center">
                 <div class="col-4">
                     <div class="mb-3">
                         <label for="InputNombreUsuario" class="form-label"><h8 style="color:black; ">Nombre</h8> </label>
-                        <input type="text" id="InputNombreProduc" class="form-control" value="aca va el nombre del usuario">
+                        <input type="text" id="InputNombreProduc" class="form-control" value="Juan">
                     </div>
                 </div>
                 <div class="col-4">
                     <div class="mb-3">
                         <label for="InputNombreProduc" class="form-label"><h8 style="color:black; ">Departamento</h8> </label>
-                        <input type="text" id="InputNombreProduc" class="form-control" value="aca va el departamento">
+                        <input type="text" id="InputNombreProduc" class="form-control" value="cundinamarca">
                     </div>
                 </div>
             </div>
@@ -30,13 +30,13 @@
                 <div class="col-4">
                     <div class="mb-3">
                         <label for="InputNombreUsuario" class="form-label"><h8 style="color:black; ">Cuidad</h8> </label>
-                        <input type="text" id="InputNombreProduc" class="form-control" value="aca va la ciudad">
+                        <input type="text" id="InputNombreProduc" class="form-control" value="facatativa">
                     </div>
                 </div>
                 <div class="col-4">
                     <div class="mb-3">
                         <label for="InputNombreProduc" class="form-label"><h8 style="color:black; ">Direccion</h8> </label>
-                        <input type="text" id="InputNombreProduc" class="form-control" value="aca va la direccion">
+                        <input type="text" id="InputNombreProduc" class="form-control" value="cll 6 b sur #7-98">
                     </div>
                 </div>
             </div>
@@ -44,13 +44,13 @@
                 <div class="col-4">
                     <div class="mb-3">
                         <label for="InputNombreUsuario" class="form-label"><h8 style="color:black; ">Contacto</h8> </label>
-                        <input type="text" id="InputNombreProduc" class="form-control" value="aca va el contacto">
+                        <input type="text" id="InputNombreProduc" class="form-control" value="	312251441">
                     </div>
                 </div>
                 <div class="col-4">
                     <div class="mb-3">
                         <label for="InputNombreProduc" class="form-label"><h8 style="color:black; ">Correo</h8> </label>
-                        <input type="text" id="InputNombreProduc" class="form-control" value="aca va el correo">
+                        <input type="text" id="InputNombreProduc" class="form-control" value="alga@gmail">
                     </div>
                 </div>
             </div>
