--- a/Views/Domiciliario/ProductosPedidos.cshtml
+++ b/Views/Domiciliario/ProductosPedidos.cshtml
@@ -21,11 +21,17 @@
         <!-- Aquí se agregan dinámicamente los productos -->
         <tr>
             <td>25</td>
-            <td>galleta 1</td>
+            <td>oreo</td>
             <td>2</td>
             <td>9000</td>
 
 
+        </tr>
+        <tr>
+            <td>25</td>
+            <td>mantil</td>
+            <td>2</td>
+            <td>9000</td>
         </tr>
     </tbody>
 </table>
