--- a/Views/Admin/InfoUsuarios.cshtml
+++ b/Views/Admin/InfoUsuarios.cshtml
@@ -82,3 +82,98 @@
             .catch(error => console.error('Error:', error));
     }
 </script>
+<style>
+
+    .table-custom th {
+        background-color: #efcbab; /* Fondo de los encabezados */
+        color: #3d2306; /* Color del texto de los encabezados */
+        font-weight: bold; /* Negrita en los encabezados */
+        text-align: center;
+    }
+
+    .table-custom td {
+        color: black; /* Color del texto de los encabezados */
+        background-color: whitesmoke;
+    }
+
+    .table-custom {
+        width: 100%;
+        font-size: 20px; /* Tamaño de fuente */
+        text-align: center;
+    }
+
+    .table th, .table td {
+        border-color: saddlebrown;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        vertical-align: middle;
+    }
+
+    .btn-secondary {
+        padding: 10px 30px;
+        font-size: 16px;
+        background-color: transparent;
+        color: whitesmoke;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    }
+
+    .btn-success {
+        padding: 10px 30px;
+        font-size: 16px;
+        background-color: saddlebrown;
+        color: whitesmoke;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    }
+
+    .btn-primary {
+        padding: 10px 30px;
+        font-size: 16px;
+        background-color: saddlebrown;
+        color: whitesmoke;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    }
+
+    .total-container {
+        text-align: right;
+        margin-top: 20px;
+    }
+
+    .total-text {
+        font-size: 25px;
+        font-weight: bold;
+        color: saddlebrown;
+    }
+
+    .btn:hover {
+        opacity: 0.8;
+        color: white;
+        background-color: #a67145;
+    }
+
+    .nav-icon:hover {
+        color: white;
+    }
+
+    .form-select {
+        background-color: #efcfb2;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    }
+
+    .input-group-text {
+        background-color: saddlebrown;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    }
+
+    .form-control {
+        background-color: #efcfb2;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    }
+</style>
