--- a/Views/Admin/Reportes.cshtml
+++ b/Views/Admin/Reportes.cshtml
@@ -29,7 +29,8 @@
                     </form>
                 </div>
             </div>
-
+            </div>
+        </div></div>
             <style>
                 .form-label {
                     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
