--- a/Views/Domiciliario/Pedidos.cshtml
+++ b/Views/Domiciliario/Pedidos.cshtml
@@ -56,6 +56,25 @@
     </thead>
     <tbody id="tableBody">
         <!-- Aquí se agregan dinámicamente los productos -->
+       
+        <tr>
+            <td>11</td>
+            <td>juan</td>
+            <td>05/09/2024</td>
+            <td>319257441</td>
+            <td>Cundinamarca</td>
+            <td>Facatativa</td>
+            <td>cll 6 b sur #7-98 </td>
+            <td>Pendiente</td>
+            <td>
+                <a href="@Url.Action("DetallesPedidos", "Domiciliario")" class="btn btn-secondary">
+                    <i class=" bi bi-eye-fill nav-icon"></i>
+                </a>
+                <a href="#" class="btn btn-secondary">
+                    <i class=" bi bi-check2-circle nav-icon " style="font-size:40px;color:forestgreen"></i>
+                </a>
+            </td>
+        </tr>
         <tr>
             <td>25</td>
             <td>Sara</td>
