--- a/Views/Shared/_Layout - Admin.cshtml
+++ b/Views/Shared/_Layout - Admin.cshtml
@@ -109,13 +109,14 @@
 
                                 <h5 class="text-black h6">Mi perfil</h5>
                                 <div class="vertical-menu">
-                                    <p><strong>Nombre:</strong></p>
-                                    <!-- Correo del usuario -->
-                                    <p><strong>Correo:</strong> </p>
-                                    <!-- Botón de cerrar sesión -->
-                                    <form action="@Url.Action("Logout", "User")" method="post">
-                                        <button type="submit" class="btn btn-danger" style=" padding: 10px 30px; font-size: 16px; background-color: saddlebrown; color: whitesmoke; border: none; border-radius: 5px; margin-top: 10px; cursor: pointer; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">Cerrar sesión</button>
-                                    </form>
+                                    @if (ViewBag.User != null)
+                                    {
+                                        <p><strong>Nombre:</strong> @ViewBag.User.Name</p>
+                 
+                                        <form action="@Url.Action("Logout", "User")" method="post">
+                                            <button type="submit" class="btn btn-danger" style="padding: 10px 30px; font-size: 16px; background-color: saddlebrown; color: whitesmoke; border: none; border-radius: 5px; margin-top: 10px; cursor: pointer; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">Cerrar sesión</button>
+                                        </form>
+                                    }
                                 </div>
                             </div>
                         </div>
